# byvo

./: .gitignore  Makefile  README.md  pubspec.yaml
.cursor/plans/: android_原生_whisper_mvp_fc481fe7.plan.md  backend_fastapi_推理迁移_5560901c.plan.md
.github/workflows/: build-apk-on-tag.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/byvo/: ByvoAccessibilityService.kt  InsertTextReceiver.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
assets/models/: README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: __init__.py  transcribe.py  transcribe_ws.py
backend/app/models/: __init__.py  transcription.py
backend/app/schemas/: __init__.py  transcription.py
backend/app/services/: __init__.py  ark_correction.py  sensevoice.py  volcengine.py
backend/config/: config.yaml.example
config/: volcengine.json.example
docs/: sensevoice-model-setup.md  whisper-model-conversion.md
lib/: debug_log.dart  main.dart  sensevoice_model_loader.dart  sensevoice_service.dart
lib/config/: backend_config.dart  volcengine_config.dart
lib/transcription/: backend_engine.dart  realtime_stream_engine.dart  sensevoice_engine.dart  transcription_engine.dart  transcription_result.dart  volcengine_engine.dart
test/: widget_test.dart
