[project]
name = "byvo-backend"
version = "0.1.0"
description = "byvo FastAPI 后端（语音转写）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.9",
    "sherpa-onnx>=1.12.0",
    "volcengine-python-sdk[ark]>=1.0.120",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
